--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-chat-server",
+  "name": "node-websocket-chat-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
